Add css style to buttons. Add draw status when none of the players win.

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ ol, ul {
   padding-left: 30px;
 }
 
+.moves-list li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
 .board-row:after {
   clear: both;
   content: "";
@@ -19,17 +23,17 @@ ol, ul {
 
 .square {
   background: #fff;
-  border: 1px solid #999;
+  border: 3px solid #999;
   float: left;
-  font-size: 24px;
+  font-size: 31px;
   font-weight: bold;
-  line-height: 34px;
-  height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
+  line-height: 31px;
+  height: 55px;
+  margin-right: -3px;
+  margin-top: -3px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 55px;
 }
 
 .square:focus {
